性能优化：预编译正则、消除 JSON 双重序列化、消除重复 beatmapinfo 请求、HashSet 加速重复检测
Co-authored-by: mangOdried <mangOdried@users.noreply.github.com>